adding manually processed papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -1735,6 +1735,20 @@
   timestamp = {2017.06.27},
 }
 
+@InProceedings{Baumes2004,
+  author    = {Baumes, J. and Goldberg, M. K. and Magdon-Ismail, M. and Wallace, W. A.},
+  title     = {Discovering hidden groups in communication networks},
+  booktitle = {International Conference on Intelligence and Security Informatics},
+  year      = {2004},
+  volume    = {3073},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {378-389},
+  doi       = {10.1007/978-3-540-25952-7_28},
+  file      = {:Discovering Hidden Groups in Communication Networks.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2012.08.23},
+}
+
 @InProceedings{Baumes2005a,
   author    = {Baumes, J. and Goldberg, M. and Magdon-Ismail, M.},
   title     = {Efficient identification of overlapping communities},
@@ -2593,6 +2607,21 @@
   owner     = {Vincent},
   timestamp = {2017.08.02},
   url       = {http://dl.acm.org/citation.cfm?id=2002570},
+}
+
+@Article{Brandes2001,
+  author    = {Brandes, U.},
+  title     = {A faster algorithm for betweenness centrality},
+  journal   = {Journal of Mathematical Sociology},
+  year      = {2001},
+  volume    = {25},
+  number    = {2},
+  pages     = {163-177},
+  doi       = {10.1080/0022250X.2001.9990249},
+  file      = {:A faster algorithm for betweenness centrality.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.02.02},
 }
 
 @Article{Brandes2006a,
@@ -5028,6 +5057,19 @@
   timestamp = {2017.06.28},
 }
 
+@InProceedings{Ding2001,
+  author    = {Ding, C. H. Q. and He, X. F. and Zha, H. Y. and Gu, M. and Simon, H. D.},
+  title     = {A min-max cut algorithm for graph partitioning and data clustering},
+  booktitle = {1st IEEE International Conference on Data Mining},
+  year      = {2001},
+  pages     = {107-114},
+  doi       = {10.1109/ICDM.2001.989507},
+  file      = {:A min-max cut algorithm for graph partitioning and data clustering.pdf:PDF},
+  groups    = {Graph Partitioning},
+  owner     = {Vincent},
+  timestamp = {2012.07.28},
+}
+
 @InProceedings{Ding2009,
   author    = {Ding, B. and Lo, D. and Han, J. and Khoo, S.-C.},
   title     = {Efficient Mining of Closed Repetitive Gapped Subsequences from a Sequence Database},
@@ -5834,6 +5876,16 @@
   owner     = {Vincent},
   timestamp = {2017.07.27},
   url       = {https://arxiv.org/abs/1411.4166},
+}
+
+@InProceedings{Fast2005,
+  author    = {Fast, A. and Jensen, D. and Levine, B. N.},
+  title     = {Creating social networks to improve peer-to-peer networking},
+  booktitle = {11th ACM/SIGKDD international conference on Knowledge discovery in data mining},
+  year      = {2005},
+  doi       = {10.1145/1081870.1081938},
+  owner     = {Vincent},
+  timestamp = {2017.08.03},
 }
 
 @Article{Faust1988,
@@ -7988,7 +8040,7 @@
   pages         = {59-70},
   __markedentry = {[Vincent:]},
   file          = {:Detecting subgroups in online discussions by modeling positive and negative relations among participants.pdf:PDF},
-  groups        = {Graph Partitioning, Not Found},
+  groups        = {Graph Partitioning, Done Manually},
   owner         = {Vincent},
   timestamp     = {2017.06.09},
   url           = {http://dl.acm.org/citation.cfm?id=2390956},
@@ -8699,6 +8751,17 @@
   groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2017.04.01},
+}
+
+@InProceedings{Huang2008,
+  author    = {Huang, L. and Yan, D. and Jordan, M. I. and Taft, N.},
+  title     = {Spectral clustering with perturbed data},
+  booktitle = {21st International Conference on Neural Information Processing Systems},
+  year      = {2008},
+  pages     = {705-712},
+  owner     = {Vincent},
+  timestamp = {2017.08.03},
+  url       = {http://dl.acm.org/citation.cfm?id=2981868},
 }
 
 @Article{Huang2010a,
@@ -9744,6 +9807,16 @@ old title: The map equation and the resolution limit in community detection},
   url         = {http://129.67.184.129/porterm/research/kelsic.pdf},
 }
 
+@InProceedings{Kempe2003,
+  author    = {Kempe, D. and Kleinberg, J. and Tardos, É.},
+  title     = {Maximizing the spread of influence through a social network},
+  booktitle = {9th ACM/SIGKDD international conference on Knowledge discovery and data mining},
+  year      = {2003},
+  doi       = {10.1145/956750.956769},
+  owner     = {Vincent},
+  timestamp = {2017.08.03},
+}
+
 @InProceedings{Kennedy1995,
   author    = {Kennedy, J. and Eberhart, R.},
   title     = {Particle swarm optimization},
@@ -10123,7 +10196,7 @@ old title: The map equation and the resolution limit in community detection},
 
 @InProceedings{Kleinberg2007,
   author    = {Kleinberg, J. M.},
-  title     = {Challenges in mining social network data},
+  title     = {Challenges in mining social network data: processes, privacy, and paradoxes},
   booktitle = {13th ACM/SIGKDD International Conference on Knowledge Discovery and Data Mining},
   year      = {2007},
   doi       = {10.1145/1281192.1281195},
@@ -10275,6 +10348,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.23},
+}
+
+@InProceedings{Koren2006,
+  author    = {Koren, Y. and North, S. C. and Volinsky, C.},
+  title     = {Measuring and extracting proximity in networks},
+  booktitle = {12th ACM/SIGKDD international conference on Knowledge discovery and data mining},
+  year      = {2006},
+  doi       = {10.1145/1150402.1150432},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.03},
 }
 
 @Article{Koren2009,
@@ -10538,6 +10622,18 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2012.07.19},
+}
+
+@InProceedings{Kumar2006,
+  author    = {Kumar, R. and Novak, J. and Tomkins, A.},
+  title     = {Structure and Evolution of Online Social Networks},
+  booktitle = {ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  year      = {2006},
+  doi       = {10.1145/1150402.1150476},
+  file      = {:Structure and Evolution of Online Social Networks.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @InProceedings{Kumar2011,
@@ -15146,7 +15242,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1016/j.physa.2017.04.037},
   file          = {:Eb&D- A new clustering approach for signed social networks based on both edge-betweenness centrality and density of subgraphs.pdf:PDF},
-  groups        = {Graph Partitioning, Not Found},
+  groups        = {Graph Partitioning, Done Manually},
   owner         = {Vincent},
   timestamp     = {2017.04.30},
 }
@@ -16111,6 +16207,18 @@ old title: The map equation and the resolution limit in community detection},
   url           = {https://arxiv.org/abs/1601.05403},
 }
 
+@InProceedings{Sedoc2017,
+  author    = {Sedoc, J. and Gallier, J. and Ungar, L. and Foster, D.},
+  title     = {Semantic Word Clusters Using Signed Spectral Clustering},
+  booktitle = {55th Annual Meeting of the ACL},
+  year      = {2017},
+  pages     = {939-949},
+  file      = {:Semantic Word Clusters Using Signed Spectral Clustering.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.08.03},
+  url       = {https://www.aclweb.org/anthology/P/P17/P17-1087.pdf},
+}
+
 @InProceedings{Selee2007,
   author    = {Selee, T. M. and Kolda, T. and Kegelmeyer, W. P. and Griffin, J. D.},
   title     = {Extracting Clusters from Large Datasets with Multiple Similarity Measures},
@@ -16660,6 +16768,19 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.22},
 }
 
+@InProceedings{Shiga2007,
+  author    = {Shiga, Motoki and Takigawa, Ichigaku and Mamitsuka, Hiroshi},
+  title     = {A Spectral Clustering Approach to Optimally Combining Numerical Vectors with a Modular Network},
+  booktitle = {13th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2007},
+  pages     = {647-656},
+  doi       = {10.1145/1281192.1281262},
+  file      = {:A spectral clustering approach to optimally combining numerical vectors with a modular network.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.08.01},
+}
+
 @Article{Shwed2010,
   author    = {Shwed, U. and Bearman, P. S.},
   title     = {The Temporal Structure of Scientific Consensus Formation},
@@ -16960,6 +17081,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
+}
+
+@InProceedings{Spertus2005,
+  author    = {Spertus, E. and Sahami, M. and Buyukkokten, O.},
+  title     = {Evaluating similarity measures},
+  booktitle = {11th ACM SIGKDD international conference on Knowledge discovery in data mining},
+  year      = {2005},
+  doi       = {10.1145/1081870.1081956},
+  groups    = {Others},
+  owner     = {Vincent},
+  timestamp = {2017.08.03},
 }
 
 @Article{Sporns2005,
@@ -17493,6 +17625,18 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Datasets, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.09},
+}
+
+@InProceedings{Tantipathananandh2007,
+  author    = {Tantipathananandh, C. and Berger-Wolf, T. and Kempe, D.},
+  title     = {A framework for community identification in dynamic social networks},
+  booktitle = {13th AMC SIGKDD international conference on knowledge discovery and data mining},
+  year      = {2007},
+  doi       = {10.1145/1281192.1281269},
+  file      = {:A framework for community identification in dynamic social networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.08.18},
 }
 
 @Article{Tardos1993,
