adding manually processed papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -6606,6 +6606,17 @@
   timestamp = {2017.07.22},
 }
 
+@Book{Gallager1963,
+  title     = {Low-density parity check codes},
+  publisher = {MIT Press},
+  year      = {1963},
+  author    = {Gallager, R. G.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.05},
+  url       = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.147.683},
+}
+
 @InProceedings{Galley2004,
   author    = {Galley, M. and McKeown, K. and Hirschberg, J. and Shriberg, E.},
   title     = {Identifying agreement and disagreement in conversational speech: use of Bayesian networks to model pragmatic dependencies},
@@ -13902,6 +13913,18 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2010.06.03},
 }
 
+@Book{Newman2003,
+  title     = {The Structure, Dynamics of Networks},
+  publisher = {Princeton University Press},
+  year      = {2003},
+  author    = {Newman, M. E. J. and Barabási, A.-L. and Watts, D. J.},
+  series    = {Princeton Studies in Complexity},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.05},
+  url       = {http://press.princeton.edu/titles/8114.html},
+}
+
 @Article{Newman2003a,
   author    = {Newman, M. E. J.},
   title     = {Mixing patterns in networks},
@@ -19100,7 +19123,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1504/IJSNM.2012.045107},
   file          = {:Examining spectral space of complex networks with positive and negative links.pdf:PDF},
-  groups        = {Graph Partitioning, Not Found},
+  groups        = {Graph Partitioning, Done Manually},
   owner         = {Vincent},
   timestamp     = {2017.05.30},
 }
