adding manually processed papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -693,6 +693,35 @@
   timestamp = {2012.08.26},
 }
 
+@Article{Alves2007,
+  author    = {Alves, N. A.},
+  title     = {Unveiling community structures in weighted networks},
+  journal   = {Physical Review E},
+  year      = {2007},
+  volume    = {76},
+  number    = {3},
+  pages     = {036101},
+  doi       = {10.1103/PhysRevE.76.036101},
+  file      = {:Unveiling community structures in weighted networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2011.01.02},
+}
+
+@Article{AmeenalBibi2017,
+  author    = {Ameenal Bibi, K. and Vijayalakshmi, B.},
+  title     = {Balanced Laplacian Energy of a Friendship Graph},
+  journal   = {International Journal of Advanced Research in Computer Science},
+  year      = {2017},
+  volume    = {8},
+  number    = {6},
+  pages     = {209-212},
+  doi       = {10.26483/ijarcs.v8i6.4322},
+  file      = {:Balanced Laplacian Energy of a Friendship Graph.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.08.05},
+}
+
 @InProceedings{Amelio2013,
   author    = {Amelio, A. and Pizzuti, C.},
   title     = {Community Mining in Signed Networks: A Multiobjective Approach},
@@ -1776,6 +1805,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.03},
+}
+
+@Article{Baym1996,
+  author    = {Baym, N. K.},
+  title     = {Agreements and Disagreements in a Computer-Mediated Discussion},
+  journal   = {Research on Language {\&} Social Interaction},
+  year      = {1996},
+  volume    = {29},
+  number    = {4},
+  pages     = {315-345},
+  doi       = {10.1207/s15327973rlsi2904_2},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.05},
 }
 
 @TechReport{Becker2005,
@@ -4024,6 +4067,20 @@
   url       = {http://dl.acm.org/citation.cfm?id=2638573},
 }
 
+@Article{Chua2007,
+  author    = {Chua, C. E. H. and Wareham, J. and Robey, D.},
+  title     = {The Role of Online Trading Communities in Managing Internet Auction Fraud},
+  journal   = {MIS Quarterly},
+  year      = {2007},
+  volume    = {31},
+  number    = {4},
+  pages     = {759-781},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.05},
+  url       = {https://www.jstor.org/stable/25148819},
+}
+
 @Book{Chung1997,
   title     = {Spectral graph theory},
   publisher = {American Mathematical Society},
@@ -4647,6 +4704,16 @@
   timestamp = {2016.11.01},
 }
 
+@InProceedings{Dave2003,
+  author    = {Dave, K. and Lawrence, S. and Pennock, D. M.},
+  title     = {Mining the peanut gallery: opinion extraction and semantic classification of product reviews},
+  booktitle = {12th international conference on World Wide Web},
+  year      = {2003},
+  doi       = {10.1145/775152.775226},
+  owner     = {Vincent},
+  timestamp = {2017.08.05},
+}
+
 @InProceedings{Davidson2009,
   author    = {Davidson, I.},
   title     = {Knowledge driven dimension reduction for clustering},
@@ -4755,6 +4822,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.22},
+}
+
+@Article{Dellarocas2003,
+  author    = {Dellarocas, C.},
+  title     = {The Digitization of Word of Mouth: Promise and Challenges of Online Feedback Mechanisms},
+  journal   = {Management Science},
+  year      = {2003},
+  volume    = {49},
+  number    = {10},
+  pages     = {1407-1424},
+  doi       = {10.1287/mnsc.49.10.1407.17308},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.05},
 }
 
 @InProceedings{Demaine2003,
@@ -5753,6 +5834,18 @@
   timestamp = {2017.04.03},
 }
 
+@InProceedings{Esuli2006,
+  author    = {Esuli, A. and Sebastiani, F.},
+  title     = {SentiWordNet: A publicly available lexical resource for opinion mining},
+  booktitle = {5th Conference on Language Resources and Evaluation},
+  year      = {2006},
+  pages     = {417-422},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.05},
+  url       = {https://www.researchgate.net/profile/Fabrizio_Sebastiani/publication/220746537_SentiWordNet_30_An_Enhanced_Lexical_Resource_for_Sentiment_Analysis_and_Opinion_Mining/links/545fbcc40cf27487b450aa21.pdf},
+}
+
 @Article{Eustace2014,
   author    = {Eustace, J. and Wang, X. and Cui, Y.},
   title     = {Overlapping community detection using neighborhood ratio matrix},
@@ -6549,6 +6642,19 @@
   timestamp = {2017.07.02},
 }
 
+@Article{Fu2008,
+  author    = {Fu, T. and Abbasi, A. and Chen, H.},
+  title     = {A hybrid approach to Web forum interactional coherence analysis},
+  journal   = {Journal of the American Society for Information Science and Technology},
+  year      = {2008},
+  volume    = {59},
+  number    = {8},
+  pages     = {1195-1209},
+  doi       = {10.1002/asi.20827},
+  owner     = {Vincent},
+  timestamp = {2017.08.05},
+}
+
 @InProceedings{Gael2007,
   author        = {van Gael, J. and Zhu, X.},
   title         = {Correlation clustering for crosslingual link detection},
@@ -6925,6 +7031,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Article{Gibson2005,
+  author    = {Gibson, D. R.},
+  title     = {Taking Turns and Talking Ties: Networks and Conversational Interaction},
+  journal   = {American Journal of Sociology},
+  year      = {2005},
+  volume    = {110},
+  number    = {6},
+  pages     = {1561-1597},
+  doi       = {10.1086/428689},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.05},
 }
 
 @Book{Gifi1990,
@@ -7613,6 +7733,21 @@
   timestamp = {2010.11.19},
 }
 
+@Article{Guimera2007a,
+  author    = {Guimerà, R. and Sales-Pardo, M. and Amaral, L. A. N.},
+  title     = {Module identification in bipartite and directed networks},
+  journal   = {Physical Review E},
+  year      = {2007},
+  volume    = {76},
+  number    = {3},
+  pages     = {036102},
+  doi       = {10.1103/PhysRevE.76.036102},
+  file      = {:Module identification in bipartite and directed networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2011.06.02},
+}
+
 @Article{Guimera2009,
   author    = {Guimerà, R. and Sales-Pardo, M.},
   title     = {Missing and spurious interactions and the reconstruction of complex networks},
@@ -7751,6 +7886,18 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.28},
+}
+
+@InProceedings{Hahn2006,
+  author    = {Hahn, S. and Ladner, R. and Ostendorf, M.},
+  title     = {Agreement/disagreement classification: exploiting unlabeled data using contrast classifiers},
+  booktitle = {Human Language Technology Conference of the NAACL},
+  year      = {2006},
+  pages     = {53-56},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
+  url       = {http://dl.acm.org/citation.cfm?id=1614063},
 }
 
 @Book{Hand1981,
@@ -8339,6 +8486,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Article{Hochschild1979,
+  author    = {Hochschild, A. R.},
+  title     = {Emotion Work, Feeling Rules, and Social Structure},
+  journal   = {American Journal of Sociology},
+  year      = {1979},
+  volume    = {85},
+  number    = {3},
+  pages     = {551-575},
+  doi       = {10.1086/227049},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
 }
 
 @Article{Hofbauer2003,
@@ -11100,6 +11261,20 @@ old title: The map equation and the resolution limit in community detection},
   url       = {http://dl.acm.org/citation.cfm?id=85343},
 }
 
+@Article{Lawler2001,
+  author    = {Lawler, E. J.},
+  title     = {An Affect Theory of Social Exchange},
+  journal   = {American Journal of Sociology},
+  year      = {2001},
+  volume    = {107},
+  number    = {2},
+  pages     = {321-352},
+  doi       = {10.1086/324071},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
+}
+
 @Article{Lazar2010,
   author    = {Lazar, A. and Abel, D. and Vicsek, T.},
   title     = {Modularity measure of networks with overlapping communities},
@@ -11593,7 +11768,7 @@ old title: The map equation and the resolution limit in community detection},
   pages         = {1426-1437},
   __markedentry = {[Vincent:]},
   file          = {:Exploiting Emotions in Social Interactions to Detect Online Socia.pdf:PDF},
-  groups        = {Graph Partitioning, Not Found},
+  groups        = {Graph Partitioning, Done Manually},
   owner         = {Vincent},
   timestamp     = {2017.05.06},
   url           = {http://aisel.aisnet.org/pacis2010/136},
@@ -12749,6 +12924,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.01},
 }
 
+@Article{Marsden1993,
+  author    = {Marsden, P. V. and Friedkin, N. E.},
+  title     = {Network Studies of Social Influence},
+  journal   = {Sociological Methods \& Research},
+  year      = {1993},
+  volume    = {22},
+  number    = {1},
+  pages     = {127-151},
+  doi       = {10.1177/0049124193022001006},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
+}
+
 @InCollection{Marti2003,
   author    = {Martí, R.},
   title     = {Multi-Start Methods},
@@ -13012,6 +13201,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Article{McMillan1986,
+  author    = {McMillan, D. W. and Chavis, D. M.},
+  title     = {Sense of community: A definition and theory},
+  journal   = {Journal of Community Psychology},
+  year      = {1986},
+  volume    = {14},
+  number    = {1},
+  pages     = {6-23},
+  doi       = {10.1002/1520-6629(198601)14:1<6::AID-JCOP2290140103>3.0.CO;2-I},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
 }
 
 @Article{McPherson2001,
@@ -13360,6 +13563,17 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.07.16},
   url       = {https://books.google.fr/books/about/Nonnegative_matrices.html?id=gAnvAAAAMAAJ},
+}
+
+@InProceedings{Mishne2006,
+  author    = {Mishne, G.},
+  title     = {Multiple ranking strategies for opinion retrieval in blogs},
+  booktitle = {15th Text REtrieval Conference},
+  year      = {2006},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
+  url       = {http://trec.nist.gov/pubs/trec15/papers/uamsterdam.blog.final.pdf},
 }
 
 @Article{Mitrovic2009,
@@ -14616,6 +14830,17 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.06.30},
 }
 
+@InProceedings{Pang2002,
+  author    = {Pang, Bo and Lee, L. and Vaithyanathan, S.},
+  title     = {Thumbs up?: sentiment classification using machine learning techniques},
+  booktitle = {ACL Conference on Empirical methods in natural language processing},
+  year      = {2002},
+  doi       = {10.3115/1118693.1118704},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
+}
+
 @InProceedings{Pang2004,
   author    = {Pang, W. and Wang, K.-P. and Zhou, C.-G. and Dong, L.-J.},
   title     = {Fuzzy discrete particle swarm optimization for solving traveling salesman problem},
@@ -14625,6 +14850,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.05},
+}
+
+@Article{Pang2008,
+  author    = {Pang, B. and Lee, L.},
+  title     = {Opinion Mining and Sentiment Analysis},
+  journal   = {Foundations and Trends in Information Retrieval},
+  year      = {2008},
+  volume    = {2},
+  number    = {1-2},
+  pages     = {1-135},
+  doi       = {10.1561/1500000011},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
 }
 
 @Article{Papadopoulos2012a,
@@ -16819,6 +17058,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.04.12},
 }
 
+@Article{Sia2002,
+  author    = {Sia, C.-L. and Tan, B. C. Y. and Wei, K.-K.},
+  title     = {Group Polarization and Computer-Mediated Communication: Effects of Communication Cues, Social Presence, and Anonymity},
+  journal   = {Information Systems Research},
+  year      = {2002},
+  volume    = {13},
+  number    = {1},
+  pages     = {70-90},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
+  url       = {http://pubsonline.informs.org/doi/abs/10.1287/isre.13.1.70.92?journalCode=isre},
+}
+
 @Book{Sideris2013,
   title     = {Ordinary Differential Equations and Dynamical Systems},
   publisher = {Atlantis Press},
@@ -17104,6 +17357,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
+}
+
+@InProceedings{Sorower2007,
+  author    = {Sorower, M. S. and Yeasin, M.},
+  title     = {Robust Classification of Dialog Acts from the Transcription of Utterances},
+  booktitle = {International Conference on Semantic Computing},
+  year      = {2007},
+  doi       = {10.1109/icsc.2007.84},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
 }
 
 @InProceedings{Spertus2005,
@@ -17868,6 +18132,20 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.07.17},
   url       = {http://xroads.virginia.edu/~HYPER/DETOC/home.html},
+}
+
+@Article{Tolle2000,
+  author    = {Tolle, K. M. and Chen, H.},
+  title     = {Comparing noun phrasing techniques for use with medical digital library tools},
+  journal   = {Journal of the American Society for Information Science},
+  year      = {2000},
+  volume    = {51},
+  number    = {4},
+  pages     = {352-370},
+  doi       = {10.1002/(sici)1097-4571(2000)51:4<352::aid-asi5>3.0.co;2-8},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
 }
 
 @Article{Tolsma2009,
@@ -18774,6 +19052,21 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.03},
 }
 
+@Article{Wellman2005,
+  author    = {Wellman, B.},
+  title     = {Community: from neighborhood to network},
+  journal   = {Communications of the ACM},
+  year      = {2005},
+  volume    = {48},
+  number    = {10},
+  pages     = {53},
+  doi       = {10.1145/1089107.1089137},
+  file      = {:Community- from neighborhood to network.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
+}
+
 @InProceedings{Welser2011,
   author    = {Welser, H. T. and Cosley, D. and Kossinets, G. and Lin, A. and Dokshin, F. and Gay, G. and Smith, M.},
   title     = {Finding social roles in Wikipedia},
@@ -18821,6 +19114,20 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.05.22},
   url       = {https://www.transacl.org/ojs/index.php/tacl/article/view/396},
+}
+
+@Article{White1961,
+  author    = {White, H.},
+  title     = {Management Conflict and Sociometric Structure},
+  journal   = {American Journal of Sociology},
+  year      = {1961},
+  volume    = {67},
+  number    = {2},
+  pages     = {185-199},
+  doi       = {10.1086/223084},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.06},
 }
 
 @Article{White1976,
