adding manually processed papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -233,6 +233,20 @@
   timestamp = {2017.07.01},
 }
 
+@Article{Adomavicius2005,
+  author    = {Adomavicius, G. and Tuzhilin, A.},
+  title     = {Toward the next generation of recommender systems: a survey of the state-of-the-art and possible extensions},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2005},
+  volume    = {17},
+  number    = {6},
+  pages     = {734-749},
+  doi       = {10.1109/tkde.2005.99},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
+}
+
 @Article{Agaev2005,
   author    = {Agaev, R. and Chebotarev, P.},
   title     = {On the spectra of nonsymmetric Laplacian matrices},
@@ -5438,6 +5452,18 @@
   timestamp = {2010.12.19},
 }
 
+@MastersThesis{Douglas2009,
+  author    = {Douglas, E. P.},
+  title     = {Clustering datasets with singular value decomposition},
+  school    = {College of Charleston},
+  year      = {2009},
+  type      = {MSc. Thesis},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
+  url       = {https://pqdtopen.proquest.com/doc/304801736.html?FMT=ABS},
+}
+
 @Book{Downs1957,
   title     = {An Economic Theory of Democracy},
   publisher = {Harper},
@@ -7238,6 +7264,20 @@
   timestamp = {2017.07.03},
 }
 
+@Article{Golbeck2009,
+  author    = {Golbeck, J.},
+  title     = {Trust and nuanced profile similarity in online social networks},
+  journal   = {ACM Transactions on the Web},
+  year      = {2009},
+  volume    = {3},
+  number    = {4},
+  pages     = {1-33},
+  doi       = {10.1145/1594173.1594174},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
+}
+
 @InProceedings{Goldberg1985,
   author    = {Goldberg, D. E. and Lingle, R.},
   title     = {Alleles, Loci, and the Traveling Salesman Problem},
@@ -7909,6 +7949,18 @@
   owner     = {Vincent},
   timestamp = {2017.07.11},
   url       = {https://books.google.fr/books/about/Discrimination_and_classification.html?id=YxrvAAAAMAAJ},
+}
+
+@InProceedings{Hanneke2009,
+  author    = {Hanneke, S. and Xing, E. P.},
+  title     = {Network completion and survey sampling},
+  booktitle = {12th International Conference on Artificial Intelligence and Statistics},
+  year      = {2009},
+  pages     = {209 -215},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
+  url       = {http://proceedings.mlr.press/v5/hanneke09a/hanneke09a.pdf},
 }
 
 @Article{Hanney2005,
@@ -8828,7 +8880,7 @@
   __markedentry = {[Vincent:]},
   doi           = {10.1145/2339530.2339612},
   file          = {:Low rank modeling of signed networks.pdf:PDF},
-  groups        = {Graph Partitioning, Not Found},
+  groups        = {Graph Partitioning, Done Manually},
   owner         = {Vincent},
   timestamp     = {2017.04.13},
 }
@@ -10123,6 +10175,19 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1103/physreve.72.046133},
   timestamp     = {2017.06.28},
+}
+
+@InProceedings{Kim2011,
+  author    = {Kim, M. and Leskovec, J.},
+  title     = {The Network Completion Problem: Inferring Missing Nodes and Edges in Networks},
+  booktitle = {SIAM International Conference on Data Mining},
+  year      = {2011},
+  pages     = {47-58},
+  publisher = {Society for Industrial and Applied Mathematics},
+  doi       = {10.1137/1.9781611972818.5},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
 }
 
 @InProceedings{Kim2011a,
@@ -11475,6 +11540,19 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2010.06.03},
 }
 
+@InProceedings{Leskovec2006,
+  author    = {Leskovec, J. and Faloutsos, C.},
+  title     = {Sampling from large graphs},
+  booktitle = {12th ACM SIGKDD International Conference on Knowledge discovery and data mining},
+  year      = {2006},
+  pages     = {631-636},
+  doi       = {10.1145/1150402.1150479},
+  file      = {:Sampling from large graphs.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
+}
+
 @InProceedings{Leskovec2008a,
   author    = {Leskovec, J. and Lang, K. J. and Dasgupta, A. and Mahoney, M. W.},
   title     = {Statistical Properties of Community Structure in Large Social and Information Networks},
@@ -11799,6 +11877,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.14},
+}
+
+@Article{Li2013,
+  author    = {Li, Y.-M. and Wu, C.-T. and Lai, C.-Y.},
+  title     = {A social recommender mechanism for e-commerce: Combining similarity, trust, and relationship},
+  journal   = {Decision Support Systems},
+  year      = {2013},
+  volume    = {55},
+  number    = {3},
+  pages     = {740-752},
+  doi       = {10.1016/j.dss.2013.02.009},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
 }
 
 @Article{Li2013g,
@@ -12213,6 +12305,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.14},
+}
+
+@InProceedings{Liu2008c,
+  author    = {Liu, H. and Lim, E.-P. and Lauw, H. W. and Le, M.-T. and Sun, A. and Srivastava, J. and Kim, Y. A.},
+  title     = {Predicting trusts among users of online communities},
+  booktitle = {9th ACM Conference on Electronic commerce},
+  year      = {2008},
+  doi       = {10.1145/1386790.1386838},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
 }
 
 @Article{Liu2009,
@@ -12647,7 +12750,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1145/2661829.2662085},
   file          = {:Improving Recommendation Accuracy by Combining Trust Communities and Collaborative Filtering.pdf:PDF},
-  groups        = {Graph Partitioning, Not Found},
+  groups        = {Graph Partitioning, Done Manually},
   owner         = {Vincent},
   timestamp     = {2017.05.08},
 }
@@ -12815,6 +12918,19 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
+}
+
+@Article{ManhCuongPhamMatthiasJarkeRalfKlammaYiweiCao2011,
+  author    = {Pham, M. C. and Jarke, M. and Klamma, R. and Cao, Y.},
+  title     = {A Clustering Approach for Collaborative Filtering Recommendation Using Social Network Analysis},
+  journal   = {Journal of Universal Computer Science},
+  year      = {2011},
+  volume    = {17},
+  number    = {4},
+  doi       = {10.3217/jucs-017-04-0583},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
 }
 
 @InProceedings{Maniu2011,
@@ -15109,6 +15225,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.06.28},
 }
 
+@InProceedings{Pitsilis2011,
+  author    = {Pitsilis, G. and Zhang, X. and Wang, W.},
+  title     = {Clustering Recommenders in Collaborative Filtering Using Explicit Trust Information},
+  booktitle = {IFIP International Conference on Trust Management},
+  year      = {2011},
+  volume    = {358},
+  series    = {IFIP Advances in Information and Communication Technology},
+  pages     = {82-97},
+  doi       = {10.1007/978-3-642-22200-9_9},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
+}
+
 @InProceedings{Pizzuti2008,
   author    = {Pizzuti, C.},
   title     = {GA-Net: a genetic algorithm for community detection in social networks},
@@ -15690,6 +15820,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2016.01.06},
 }
 
+@Article{Recht2010,
+  author    = {Recht, B. and Fazel, M. and Parrilo, P. A.},
+  title     = {Guaranteed Minimum-Rank Solutions of Linear Matrix Equations via Nuclear Norm Minimization},
+  journal   = {SIAM Review},
+  year      = {2010},
+  volume    = {52},
+  number    = {3},
+  pages     = {471-501},
+  doi       = {10.1137/070697835},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
+}
+
 @Article{Reff2011,
   author        = {Reff, N.},
   title         = {New bounds for the Laplacian spectral radius of a signed graph},
@@ -15817,6 +15961,18 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.19},
+}
+
+@InProceedings{Resnick1994,
+  author    = {Resnick, P. and Iacovou, N. and Suchak, M. and Bergstrom, P. and Riedl, J.},
+  title     = {GroupLens: an open architecture for collaborative filtering of netnews},
+  booktitle = {ACM Conference on Computer supported cooperative work},
+  year      = {1994},
+  pages     = {175-186},
+  doi       = {10.1145/192844.192905},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
 }
 
 @Article{Richardson2009,
@@ -16866,7 +17022,7 @@ old title: The map equation and the resolution limit in community detection},
   pages     = {93-117},
   doi       = {10.1007/978-3-642-31821-4_5},
   file      = {:Community structure of complex networks.pdf:PDF},
-  groups    = {Graph Partitioning, Not Found},
+  groups    = {Graph Partitioning, Done Manually},
   owner     = {Vincent},
   timestamp = {2017.04.26},
 }
@@ -18485,6 +18641,17 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.06.19},
   url       = {http://www.jstor.org/stable/j.ctt45kdp8},
+}
+
+@InProceedings{Ungar1998,
+  author    = {Ungar, L. H. and Foster , D. P.},
+  title     = {Clustering Methods for Collaborative Filtering},
+  booktitle = {AAAI Workshop on Recommendation Systems},
+  year      = {1998},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
+  url       = {https://vvvvw.aaai.org/Papers/Workshops/1998/WS-98-08/WS98-08-029.pdf},
 }
 
 @Article{Vandenberghe1996,
